# backtesting-shared-version

./: .gitignore  README.md  backtester.py  data_collector.py  database.py  main.py  models.py  optimizer.py  pyproject.toml  test.py  utils.py
backtesting_cpp/: CMakeLists.txt  Database.cpp  Database.h  Utils.cpp  Utils.h  main.cpp
backtesting_cpp/strategies/: Psar.cpp  Psar.h  Sma.cpp  Sma.h
exchanges/: __init__.py  binance.py  ftx.py
results/: trade_BTCUSDT_sma_dual_long_4h_fr2019-12-31_to2023-04-24_sma139_fma20cp2_spct0.005_tpct0.004.csv  trade_BTCUSDT_sup_res_4h_fr2020-12-31_to2023-02-01_m2_md5_p15_l9.46.txt
strategies/: __init__.py  single_ma_long.py  sma_dual_ls.py  trade_strategy.py
strategies/depricated/: consecutive.py  ichimoku.py  obv.py  support_resistance.py
