[tool.poetry]
name = "backtesting"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
python-dateutil = "^2.8.2"
h5py = "^3.7.0"
numpy = "^1.24.1"
pandas = "^1.5.2"
mplfinance = "^0.12.9b7"
tk = "^0.1.0"
jupyter = "^1.0.0"
binance-connector="*"
sqlalchemy = "^2.0.19"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
